src/objects/Logger__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ChatterGroupId__c</fullName>
        <label>Chatter Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Public_Group_Id__c</fullName>
        <description>The record id of the chatter group to which the logging must be added.</description>
        <label>Chatter Public Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Limits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <label>Logger</label>
</CustomObject>